# cclab

./: CMakeLists.txt  Magazine.cpp  Magazine.h  Scaner.cpp  Scaner.h  defs.h  main.cpp  test-debug.txt  test2.txt
TestsScanner/: TestScanner.cpp
asm/: GenerAsm.cpp  GenerAsm.h  test-debug.txt
magazine/: Magazine.cpp  Magazine.h  TestMagazine.cpp  test-bad.txt  test-debug.txt  test-success.txt
scaner/: Scaner.cpp  Scaner.h  TestScanner.cpp
semantic/: Semantic.cpp  Semantic.h  TestSemantic.cpp  test-bad.txt  test-debug.txt  test-success.txt
translator/: Translate.cpp  Translate.h  TranslatorHelper.h
triad/: GenerTriad.cpp  GenerTriad.h  TriadHelper.h  test-bad.txt  test-debug.txt
